@@ -1,3 +1,7 @@
+Fri Aug  7 01:04:17 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
+
+	* ext/tk/extconf.rb (search_tclConfig): fix logic bug.
+
 Thu Aug  6 09:06:39 2009  Tanaka Akira  <akr@fsij.org>
 
 	* eval.c (rb_thread_schedule): refine previous change.
